further fix to spacing on large format

--- a/css/styles.css
+++ b/css/styles.css
@@ -230,6 +230,7 @@ p{
 			height: 350px;
 			width: 250px;
 			float:left;
+			padding-bottom: 10px;
 			}
     }
     /*LARGE STYLES END*/
